tests/ui/endpoint/invalid_placeholders_ty.stderr
error[E0277]: the trait bound `FooPlaceholders: gotham_restful::private::OpenapiType` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `gotham_restful::private::OpenapiType` is not implemented for `FooPlaceholders`
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:10:1
   |
10 | struct FooPlaceholders {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `gotham_restful::private::OpenapiType`:
             &T
             ()
             BTreeMap<K, V>
             BTreeSet<T>
             CStr
             CString
             HashMap<K, V, S>
             HashSet<T, S>
           and $N others
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     #[openapi_bound(Placeholders: OpenapiType)]
   |                                   ^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Placeholders`
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |          ------------ required by a bound in this associated type

error[E0277]: the trait bound `FooPlaceholders: Clone` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `FooPlaceholders`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                                              ^^^^^ required by this bound in `EndpointWithSchema::Placeholders`
help: consider annotating `FooPlaceholders` with `#[derive(Clone)]`
   |
10 + #[derive(Clone)]
11 | struct FooPlaceholders {
   |

error[E0277]: the trait bound `FooPlaceholders: StateData` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `StateData` is not implemented for `FooPlaceholders`
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:10:1
   |
10 | struct FooPlaceholders {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `StateData`:
             AuthSource
             AuthStatus<T>
             Body
             CookieJar
             CorsConfig
             FilePathExtractor
             HeaderMap
             Method
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Placeholders` to implement `PathExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Placeholders`

error[E0277]: the trait bound `FooPlaceholders: StaticResponseExtender` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `StaticResponseExtender` is not implemented for `FooPlaceholders`
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:10:1
   |
10 | struct FooPlaceholders {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `StaticResponseExtender`:
             FilePathExtractor
             NoopExtractor
             NoopPathExtractor
             NoopQueryStringExtractor
             NoopResponseExtender
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Placeholders` to implement `PathExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Placeholders`

error[E0277]: the trait bound `FooPlaceholders: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:15:16
   |
15 | fn endpoint(_: FooPlaceholders) {
   |                ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `for<'de> serde_core::de::Deserialize<'de>` is not implemented for `FooPlaceholders`
  --> tests/ui/endpoint/invalid_placeholders_ty.rs:10:1
   |
10 | struct FooPlaceholders {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `FooPlaceholders` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::de::Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Placeholders` to implement `PathExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Placeholders`
  --> src/endpoint.rs
   |
   |     type Placeholders: PathExtractor<Body> + Clone + Sync;
   |                        ^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Placeholders`
